Fix code block scrollbars on Safari
Don't want that shit to wrap, you know.

--- a/media/css/dcreager.css
+++ b/media/css/dcreager.css
@@ -90,6 +90,10 @@ pre {
     overflow-x: auto;
 }
 
+pre code {
+    display: inline-block;
+}
+
 table.CodeRay {
     display: block;
     overflow-x: auto;
